Added GET Author endpoint and tests